--- a/action.yml
+++ b/action.yml
@@ -3,16 +3,25 @@ description: This is an action to run boman ai scan on your repo using the lates
 author: Madhavan Mani
 inputs:
   boman-action:  # id of input
-    description: 'action for he boman-cli'
+    description: 'Action for he boman-cli'
     required: true
     default: 'run'
   boman-saas-url:  # id of input
-    description: 'Url of the boman saas'
+    description: 'URL of the boman saas'
     required: false
     default: 'https://dashboard.boman.ai/v2'  
+  boman-config-file:  # id of input
+    description: 'Name of the boman config file'
+    required: false
+    default: 'boman.yaml'
+  boman-cli-version:  # id of input
+    description: 'Version of the boman-cli'
+    required: false
+    default: '1.7'
+
 branding:
   icon: 'shield'
-  color: 'white'
+  color: 'blue'
 runs:
   using: composite
   steps:
@@ -20,8 +29,8 @@ runs:
       id: running-boman-cli
       shell: bash
       run: |
-      pip install boman-cli
-      boman-cli -a ${{boman-action}} -u ${{boman-saas-url}}
+      pip install boman-cli==${{boman-cli-version}}
+      boman-cli -a ${{boman-action}} -u ${{boman-saas-url}} -config ${{boman-config-file}}
       
 
 
