--- a/action.yaml
+++ b/action.yaml
@@ -6,10 +6,30 @@ branding:
   color: 'blue'
 
 inputs:
-  args:
-    description: 'Arguments to pass to boman-cli'
+  action:
+    description: 'The action to perform'
     required: true
-    default: '--help'
+    default: 'run'
+  failbuild:
+    description: 'Fail the build on error'
+    required: false
+    default: 'all'
+  zap_session_script:
+    description: 'Path to the ZAP session script'
+    required: false
+    default: ''
+  config:
+    description: 'Path to the config file'
+    required: false
+    default: ''
+  boman_saas_url:
+      description: 'URL of the Boman SaaS'
+      required: false
+      default: 'https://dashboard.boman.ai/v2'
+  use-sudo:
+    description: 'Whether to run the command with sudo'
+    required: false
+    default: 'true'
 
 runs:
   using: 'composite'
@@ -21,8 +41,33 @@ runs:
       run: pip install boman-cli
       shell: bash
 
-    - name: Run boman-cli
-      run: boman-cli ${{ inputs.args }}
+    - name: Build the command
+      id: build-command
+      run: |
+        cmd="boman-cli -action ${{ inputs.action }}"
+        if [ "${{ inputs.failbuild }}" = "true" ]; then
+          cmd="$cmd -failbuild"
+        fi
+        if [ -n "${{ inputs.zap_session_script }}" ]; then
+          cmd="$cmd -zap_session_script ${{ inputs.zap_session_script }}"
+        fi
+        if [ -n "${{ inputs.config }}" ]; then
+          cmd="$cmd -config ${{ inputs.config }}"
+        fi
+        if [ -n "${{ inputs.boman_saas_url }}" ]; then
+          cmd="$cmd -u ${{ inputs.boman_saas_url }}"
+        fi
+        echo "::set-output name=cmd::$cmd"
+      shell: bash
+
+    - name: Run boman-cli without sudo
+      if: ${{ inputs.use-sudo != 'true' }}
+      run: ${{ steps.build-command.outputs.cmd }}
+      shell: bash
+
+    - name: Run boman-cli with sudo
+      if: ${{ inputs.use-sudo == 'true' }}
+      run: sudo ${{ steps.build-command.outputs.cmd }}
       shell: bash
 
 outputs:
