--- a/action.yaml
+++ b/action.yaml
@@ -37,16 +37,13 @@ runs:
     - name: Check out the repository
       uses: actions/checkout@v3
 
-    - name: Install boman-cli
-      run: pip install boman-cli
-      shell: bash
 
     - name: Build the command
       id: build-command
       run: |
-        cmd="boman-cli -action ${{ inputs.action }}"
+        cmd="boman-cli -a ${{ inputs.action }}"
         if [ "${{ inputs.failbuild }}" = "true" ]; then
-          cmd="$cmd -failbuild"
+          cmd="$cmd -fb ${{ inputs.failbuild }}"
         fi
         if [ -n "${{ inputs.zap_session_script }}" ]; then
           cmd="$cmd -zap_session_script ${{ inputs.zap_session_script }}"
@@ -60,10 +57,21 @@ runs:
         echo "cmd=$cmd" >> $GITHUB_ENV
       shell: bash
 
+
+    - name: Install boman-cli without sudo
+      run: pip install boman-cli
+      shell: bash
+
     - name: Run boman-cli without sudo
       if: ${{ inputs.use-sudo != 'true' }}
       run: ${{ env.cmd }}
       shell: bash
+
+    - name: Install boman-cli with sudo
+      if: ${{ inputs.use-sudo == 'true' }}
+      run: sudo pip install boman-cli
+      shell: bash
+
 
     - name: Run boman-cli with sudo
       if: ${{ inputs.use-sudo == 'true' }}
