--- a/action.yaml
+++ b/action.yaml
@@ -8,7 +8,7 @@ branding:
 inputs:
   action:
     description: 'The action to perform'
-    required: true
+    required: false
     default: 'run'
   failbuild:
     description: 'Fail the build on error'
